[project]
name = "sam2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "accelerator>=2025.9.5",
    "fastparquet>=2024.11.0",
    "hydra-core>=1.3.2",
    "ipdb>=0.13.13",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "jupyter-bbox-widget>=0.6.0",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "pycocotools>=2.0.10",
    "supervision>=0.26.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.57.0",
]
