[project]
name = "sam2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "accelerator>=2025.9.5",
    "bitarray>=3.7.2",
    "fastparquet>=2024.11.0",
    "huggingface-hub>=0.35.3",
    "hydra-core>=1.3.2",
    "ipdb>=0.13.13",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "jupyter-bbox-widget>=0.6.0",
    "pandas>=2.3.3",
    "prettytable>=3.16.0",
    "pyarrow>=21.0.0",
    "pycocotools>=2.0.10",
    "scikit-learn>=1.7.2",
    "supervision>=0.26.1",
    "timm>=1.0.21",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.57.0",
]
